--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -4,19 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Aplicación</title>
-  <link rel="stylesheet" href="/styles.css"> <!-- Enlaza tu archivo CSS -->
+  <link rel="stylesheet" href="/styles.css">  
 </head>
 <body>
   <header>
     <h1>Bienvenido a Mi Aplicación</h1>
   </header>
   <main>
-    <p>Este es el contenido principal de tu aplicación.</p>
-    <!-- Puedes incluir más contenido aquí, como formularios, botones, etc. -->
+    <p>Este es el contenido principal de tu aplicación.</p> 
   </main>
   <footer>
-    <p>&copy; 2024 Mi Aplicación. Todos los derechos reservados.</p>
+    <p>&copy; 2022 Mi Aplicación. Todos los derechos reservados.</p>
   </footer>
-  <script src="/scripts.js"></script> <!-- Enlaza tu archivo JavaScript -->
+  <script src="/scripts.js"></script>  
 </body>
 </html>
